Wed Sep  5 20:09:09 UTC 2012  Steve Huston  <shuston@riverace.com>

        * ace/SSL/SSL_SOCK_Stream.inl (recv_i): Added back in logic to wait
          for data available to receive when called with a timeout. Thanks
          to Ossama Othman for helping to sort this out. For reference, the
          issues involved here are well-explained in "SSL and TLS" by
          Eric Rescorla, section 8.9.

        * ace/SSL/SSL_SOCK_Stream.cpp (recv_n): Removed the hack-y retry on
          EWOULDBLOCK - the proper handling of timeouts is now in its proper
          place in recv_i() - see above.

Mon Aug 27 20:38:00 UTC 2012  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/platform_linux.GNU: Make CC and CXX setting
          conditional again. Reverts the following:
          Tue Mar  1 11:31:55 UTC 2011  Olli Savia  <ops@iki.fi>

Thu May 24 14:35:04 UTC 2012  Steve Huston  <shuston@riverace.com>

        * ace/Cache_Map_Manager_T.cpp (find): Remove extraneous () from
          'second' - leftover from ACE_Pair days.

        * tests/Cache_Map_Manager_Test.cpp: Add call to the above method.

        * THANKS: Thanks to Milind Pangarkar for the above test, and fix.

Tue Apr  3 22:49:11 UTC 2012  Steve Huston  <shuston@riverace.com>

        * ace/SOCK_Dgram_Mcast.cpp (subscribe_ifs): Set the error code when
          a Windows API call fails. Also, when calling GetAdaptersAddresses()
          to both check size and get the info, supply GAA_FLAG_SKIP_MULTICAST
          as the flag value. This avoids obtaining info for joined multicast
          addresses, not multicastable interfaces. Without the flag, and if
          some other process does a join between the size-check call and the
          info-gathering call, the size will be wrong.

Wed Mar 28 21:44:20 UTC 2012  Steve Huston  <shuston@riverace.com>

        * tests/Multicast_Test.cpp: Removed the forced set_nic to "lo" for
          Linux. It's not needed with the changes from: